--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,11 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div  id="main-text" class="center">
+        <div  class="center">
+            <img src="/ui/madi.png" class="img-medium"/>
+        </div>
+        
+         <div id="main-text" class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
