--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         
-         <div id="main-text" class="center">
+         <div id="main-text" class="center text">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
