--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         
          <div id="main-text" class="center text">
-            <img src="/ui/madi.png" class="img-medium"/>
+           <p>Come on man!</p>
         </div>
         <br>
         <div class="center text-big bold">
