--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,8 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div  class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+        <div  class="container">
+            <img src="https://lh3.googleusercontent.com/-b1PjJUCI2zY/WGoQEMTA4kI/AAAAAAAAAGM/gQ92Hl-59worB90D5KB2bLjlMsnoFsN1QCEw/w139-h140-p/IMG-20161231-WA0004.jpg" class="img-medium"/>
         </div>
         
          <div id="main-text" class="center text">
