--- a/ui/index.html
+++ b/ui/index.html
@@ -5,15 +5,20 @@
     </head>
     <body>
         <div  class="container">
+            <div class="center">
             <img src="https://lh3.googleusercontent.com/-b1PjJUCI2zY/WGoQEMTA4kI/AAAAAAAAAGM/gQ92Hl-59worB90D5KB2bLjlMsnoFsN1QCEw/w139-h140-p/IMG-20161231-WA0004.jpg" class="img-medium"/>
         </div>
-        
-         <div id="main-text" class="center text">
-           <p>Come on man!</p>
+        <hr>
+        <h2>Personal</h2>
+         <div  class="center text">
+           <p>Hi,My name is Rahul Gupta</p>
         </div>
-        <br>
+        <hr>
+        <h2>Profession</h2>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            I am a Computer Engineer.
+        </div>
+        <hr>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
