[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,12 +10,12 @@
         </div>
         <hr>
         <h2>Personal</h2>
-         <div  class="center text">
+         <div>
            <p>Hi,My name is Rahul Gupta</p>
         </div>
         <hr>
         <h2>Profession</h2>
-        <div class="center text-big bold">
+        <div>
             I am a Computer Engineer.
         </div>
         <hr>
